added validation to threshold form field

--- a/framework/clients/ferrisweb/templates/fasta_upload_form.tmpl
+++ b/framework/clients/ferrisweb/templates/fasta_upload_form.tmpl
@@ -7,7 +7,7 @@
 <div class="title">Hmm..</div>
 <div class="links-bar">{% include "links.tmpl" %}</div>
 
-<p class="info">Upload your sequences for analysis. If you provide a confidence threshold, any sequences classified with a confidence lower than the threshold will be regarded as unclassified.</p>
+<p class="info">Upload your sequences for analysis. If you provide a confidence threshold (between 0 and 1), any sequences classified with a confidence lower than the threshold will be regarded as unclassified.</p>
 
 <div class="form">
 <form enctype="multipart/form-data" method="post" action="/new/rdp/">
