percent confidence filter for BLAST

--- a/framework/clients/ferrisweb/templates/blast_upload_form.tmpl
+++ b/framework/clients/ferrisweb/templates/blast_upload_form.tmpl
@@ -7,6 +7,12 @@
 {% block info %}Upload FASTA file for analysis{% endblock info%}
 
 {% block extra_fields %}
+  <p>
+    {{ form.threshold_type.errors}}<br />
+    {{ form.threshold.errors}}
+    <label class="{% if form.db_name.errors %}error_field{% endif %}" for="id_threshold_type">Confidence threshold?</label>
+    {{form.threshold_type}}{{ form.threshold }}
+  </p>
    <p >
   {{ form.db_name.errors }}<label class="{% if form.db_name.errors %}error_field{% endif %}" for="id_db_name">BLAST database:</label>
   {{ form.db_name}}
