template fixy (it does not say "New RDP Analysis" on new BLAST analysis page anymore).

--- a/framework/clients/ferrisweb/templates/blast_upload_form.tmpl
+++ b/framework/clients/ferrisweb/templates/blast_upload_form.tmpl
@@ -1,8 +1,12 @@
 {% extends "fasta_upload_form.tmpl" %}
 
-{% block title %}Info..{% endblock %}
+{% block title %}Viamics » New BLAST Analysis{% endblock %}
 
-{% block header %}Viamics » New BLAST analysis{% endblock header %}
+{% block header_section %}
+<div class="head">Viamics » New BLAST Analysis</div>
+<div class="title">Hmm..</div>
+<div class="links-bar">{% include "links.tmpl" %}</div>
+{% endblock header_section %}
 
 {% block info %}Upload FASTA file for analysis{% endblock info%}
 
