fixed js issues in ffox

--- a/framework/clients/ferrisweb/templates/fasta_upload_form.tmpl
+++ b/framework/clients/ferrisweb/templates/fasta_upload_form.tmpl
@@ -85,7 +85,7 @@ homo.click(function () {
 
 
 
-<a href="#" onclick="prepend_input(this,this.parentElement.childElementCount);"><p>More Files <img src="/static/pulldown.jpg" /></p></a>
+<a href="#" onclick="prepend_input(this,$(this).parent().children().length);"><p>More Files <img src="/static/pulldown.jpg" /></p></a>
 </div>
 <input type="submit" value="Submit" />
 </form>
