docs, hunt down remaining seperator

--- a/framework/clients/ferrisweb/templates/fasta_upload_form.tmpl
+++ b/framework/clients/ferrisweb/templates/fasta_upload_form.tmpl
@@ -22,8 +22,8 @@ Viamics » New Pyrosequencing Analysis
   {{ form.job_description}} </p>
 
 <p >
-  {{ form.seperator.errors }}<label class="{% if form.seperator.errors %}error_field{% endif %}" for="id_seperator">Seperator:</label>
-  {{ form.seperator }}
+  {{ form.separator.errors }}<label class="{% if form.separator.errors %}error_field{% endif %}" for="id_separator">Separator:</label>
+  {{ form.separator }}
 </p>
 {% block extra_fields %}
 <p >
